// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adapter processes app request and dependency as spans 1`] = `Array []`;

exports[`Adapter processes app request and dependency as spans 2`] = `
Array [
  Span {
    "attributes": Object {
      "app_role_instance": "very long id string",
      "app_role_name": "functionAppName goes here",
      "billed_size": 1082,
      "category": "Host.Results",
      "client_city": "Portland",
      "client_country_or_region": "United States",
      "client_ip": "0.0.0.0",
      "client_state_or_province": "Oregon",
      "client_type": "PC",
      "duration.ms": 9.1593,
      "full_name": "Functions.{function name}",
      "function_execution_time_ms": "4.7239",
      "host_instance_id": "hostInstanceIdValue",
      "http_method": "GET",
      "http_path": "/api/{function name goes here}",
      "http_response_code": "200",
      "http_url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "invocation_id": "invocationIdValue",
      "item_count": 1,
      "log_level": "Information",
      "log_type": "AppRequests",
      "name": "{function name}",
      "performance_bucket": "<250ms",
      "process_id": "8912",
      "resource_guid": "resourceGuid",
      "resource_id": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdk_version": "azurefunctions: 3.0.15571.0",
      "service.name": "{function name}",
      "success": true,
      "trigger_reason": "This function was programmatically called via the host APIs.",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
]
`;

exports[`Adapter processes app request and dependency as spans 3`] = `
Array [
  Span {
    "attributes": Object {
      "app_role_instance": "very long id string",
      "app_role_name": "functionAppName goes here",
      "billed_size": 1082,
      "category": "Host.Results",
      "client_city": "Portland",
      "client_country_or_region": "United States",
      "client_ip": "0.0.0.0",
      "client_state_or_province": "Oregon",
      "client_type": "PC",
      "duration.ms": 9.1593,
      "full_name": "Functions.{function name}",
      "function_execution_time_ms": "4.7239",
      "host_instance_id": "hostInstanceIdValue",
      "http_method": "GET",
      "http_path": "/api/{function name goes here}",
      "http_response_code": "200",
      "http_url": "https://{function app name}.azurewebsites.net/api/{function name}",
      "invocation_id": "invocationIdValue",
      "item_count": 1,
      "log_level": "Information",
      "log_type": "AppRequests",
      "name": "{function name}",
      "performance_bucket": "<250ms",
      "process_id": "8912",
      "resource_guid": "resourceGuid",
      "resource_id": "/SUBSCRIPTIONS/subscriptionID goes here/RESOURCEGROUPS/resource group goes here/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name}",
      "sdk_version": "azurefunctions: 3.0.15571.0",
      "service.name": "{function name}",
      "success": true,
      "trigger_reason": "This function was programmatically called via the host APIs.",
    },
    "id": "09d760d34d75e847",
    "timestamp": 1619736074123,
    "trace.id": "12345",
  },
  Span {
    "attributes": Object {
      "app_role_instance": "{role instance id}",
      "app_role_name": "Web",
      "billed_size": 786,
      "client_city": "San Jose",
      "client_country_or_region": "United States",
      "client_ip": "0.0.0.0",
      "client_os": "Windows_NT 10.0.14393",
      "client_state_or_province": "California",
      "client_type": "PC",
      "dependency_type": "{dependencyTypeName property of client.trackDependency}",
      "duration.ms": 231,
      "http_target": "{target property of client.trackDependency}",
      "item_count": 1,
      "log_type": "AppDependencies",
      "name": "{name property of client.trackDependency}",
      "parent.id": "12345",
      "performance_bucket": "<250ms",
      "resource_guid": "{resource uuid4}",
      "resource_id": "/SUBSCRIPTIONS/{subscription id}/RESOURCEGROUPS/{resource group in all caps}/PROVIDERS/MICROSOFT.INSIGHTS/COMPONENTS/{function app name in all caps}",
      "sdk_version": "node:1.8.10",
      "success": true,
    },
    "id": "{id value}",
    "timestamp": 1620165670940,
    "trace.id": "67890",
  },
]
`;
